RESOLVED FIXED115172
REGRESSION (r147797): Animations slideshows of images on www.thesuperficial.com are slow
https://bugs.webkit.org/show_bug.cgi?id=115172
Summary REGRESSION (r147797): Animations slideshows of images on www.thesuperficial.c...
Antti Koivisto
Reported 2013-04-25 05:49:09 PDT
On this page ad subframes loads on slideshow navigation switch us to throttled state. We should only throttle layer flushes for the main load, not for any subsequent dynamically triggered subframe load.
Attachments
patch (4.09 KB, patch)
2013-04-25 05:58 PDT, Antti Koivisto
kling: review+
Antti Koivisto
Comment 1 2013-04-25 05:58:18 PDT
Antti Koivisto
Comment 2 2013-04-25 05:58:49 PDT
Andreas Kling
Comment 3 2013-04-25 06:01:54 PDT
Comment on attachment 199655 [details] patch View in context: https://bugs.webkit.org/attachment.cgi?id=199655&action=review r=me > Source/WebCore/loader/FrameLoader.cpp:3322 > - bool isLoadProgressing = m_frame->page()->progress()->isLoadProgressing(); > + bool isLoadProgressing = m_frame->page()->progress()->isMainLoadProgressing(); You may also want to rename the variable.
Antti Koivisto
Comment 4 2013-04-25 06:25:13 PDT
Note You need to log in before you can comment on or make changes to this bug.