REGRESSION (r147797): Animations slideshows of images on www.thesuperficial.com are slow https://bugs.webkit.org/show_bug.cgi?id=115172

Reviewed by Andreas Kling.

On this page ads dynamically loaded to subframes on slideshow navigation switch us to state where we throttle layer flushes.

Fix by ignoring any subframe-originated loads when determining throttling.

* loader/FrameLoader.cpp:
(WebCore::FrameLoader::loadProgressingStatusChanged):
* loader/ProgressTracker.cpp:
(WebCore::ProgressTracker::isMainLoadProgressing):

    Rename, ignore subframe originated loads. Subframe loads that are initiated during the main load still count.

* loader/ProgressTracker.h:
(ProgressTracker):
* page/FrameView.cpp:
(WebCore::FrameView::updateLayerFlushThrottlingInAllFrames):
* page/FrameView.h:
(FrameView):
* rendering/RenderLayerBacking.cpp:
(WebCore::computeTileCoverage):



Canonical link: https://commits.webkit.org/133602@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@149105 268f45cc-cd09-0410-ab3c-d52691b4dbfc